--- a/public/todo.css
+++ b/public/todo.css
@@ -312,6 +312,7 @@ body {
 	color: inherit;
 	margin: 3px;
 	padding: 3px 7px;
+	text-transform: capitalize;
 	text-decoration: none;
 	border: 1px solid transparent;
 	border-radius: 3px;
