--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -1,33 +1,16 @@
 @layout('layouts/main')
 
 @section('body')
-	<section class="todoapp" x-data="{
-		tasks: [],
-		completed: [],
-		show: 'all',
-		editing: '',
-		filter(id) {
-			const isCompleted = this.completed.includes(id)
-			return this.show === 'all' || (this.show === 'active' && !isCompleted) || (this.show === 'completed' && isCompleted)
-		},
-		delTask(id) {
-			this.tasks = this.tasks.filter(taskId => taskId !== id)
-			this.completed = this.completed.filter(taskId => taskId !== id)
-		},
-		delCompleted() {
-			this.tasks = this.tasks.filter(taskId => !this.completed.includes(taskId))
-			this.completed = []
-		}
-	}">
-		<input type="hidden" x-model="completed" name="completedId" />
+	<section class="todoapp" x-data>
+		<input type="hidden" x-model="$store.todo.completed" name="completedId" />
 		<header class="header">
 			<h1>todos</h1>
 			<input
 				class="new-todo"
 				placeholder="What needs to be done?"
-				name="add"
+				name="name"
 				autofocus
-				hx-post="/todo/add"
+				hx-post="/todo/create"
 				hx-target=".todo-list"
 				hx-swap="afterbegin"
 				@htmx:after-request="$event.target.value = ''"
@@ -42,38 +25,34 @@
 				hx-put="/todo/toggle"
 				hx-trigger="change delay:200ms"
 				hx-include="[name='completedId']"
-				@change="completed = completed.length !== tasks.length ? tasks : []"
+				@change="$store.todo.completed = $store.todo.completed.length !== $store.todo.tasks.length ? $store.todo.tasks : []"
 			>
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="todo-list"></ul>
 		</section>
 		<!-- This footer should be hidden by default and shown when there are todos -->
-		<footer class="footer" hidden x-effect="$el.hidden = !tasks.length">
+		<footer class="footer" hidden x-effect="$el.hidden = !$store.todo.tasks.length">
 			<!-- This should be `0 items left` by default -->
 			<span class="todo-count">
-				<strong x-text="tasks.length - completed.length"></strong>
+				<strong x-text="$store.todo.tasks.length - $store.todo.completed.length"></strong>
 				item left
 			</span>
 			<!-- Remove this if you don't implement routing -->
-			<ul class="filters">
-				<li>
-					<a :class="show === 'all' && 'selected'" href="#" @click="show = 'all'">All</a>
-				</li>
-				<li>
-					<a :class="show === 'active' && 'selected'" href="#active" @click="show = 'active'">Active</a>
-				</li>
-				<li>
-					<a :class="show === 'completed' && 'selected'" href="#completed" @click="show = 'completed'">Completed</a>
-				</li>
+			<ul class="filters" x-data="{ filters: ['all', 'active', 'completed'] }">
+				<template x-for="status in filters">
+					<li>
+						<a :class="$store.todo.show === status && 'selected'" href="#" @click="$store.todo.show = status" x-text="status"></a>
+					</li>
+				</template>
 			</ul>
 			<!-- Hidden if no completed items are left ↓ -->
 			<button
 				class="clear-completed"
-				x-show="completed.length"
+				x-show="$store.todo.completed.length"
 				hx-delete="/todo/del"
 				hx-include="[name='completedId']"
 				hx-swap="none"
-				@htmx:after-request="delCompleted"
+				@htmx:after-request="$store.todo.delCompleted"
 			>
 				Clear completed
 			</button>
