--- a/resources/views/swap/task.edge
+++ b/resources/views/swap/task.edge
@@ -1,32 +1,33 @@
 <li
 	:class="{
-		completed: completed.includes('{{ id }}'),
-		editing: editing === '{{ id }}'
+		completed: $store.todo.completed.includes('{{ id }}'),
+		editing
 	}"
-	x-init="tasks.push('{{ id }}')"
-	x-effect="!tasks.includes('{{ id }}') && $el.remove()"
-	x-show="filter('{{ id }}')"
+	x-data="{ editing: false }"
+	x-init="$store.todo.tasks.push('{{ id }}')"
+	x-effect="!$store.todo.tasks.includes('{{ id }}') && $el.remove()"
+	x-show="$store.todo.filter('{{ id }}')"
 >
 	<div class="view">
 		<input
 			class="toggle"
 			type="checkbox"
 			value="{{ id }}"
-			x-model="completed"
+			x-model="$store.todo.completed"
 			hx-patch="/todo/{{ id }}/toggle"
 		>
-		<label @dblclick="editing = '{{ id }}'">{{ name }}</label>
+		<label @dblclick="editing = true">{{ name }}</label>
 		<button
 			class="destroy"
 			hx-delete="/todo/{{ id }}/del"
-			@htmx:after-request="delTask('{{ id }}')"
+			@htmx:after-request="$store.todo.delTask('{{ id }}')"
 		></button>
 	</div>
 	<input
 		class="edit"
 		value="{{ name }}"
-		@keyup.enter="editing = ''"
-		@keyup.esc="editing = ''"
+		@keyup.enter="editing = false"
+		@keyup.esc="editing = false"
 		name="newName"
 		hx-patch="/todo/{{ id }}/update"
 		hx-target="previous .view label"
